--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-
-keras==2.10.0
-
-tensorflow==2.12.0
-
+pip==21.3.1
+setuptools==58.0.4
+streamlit
+opencv-python-headless
+numpy
+tensorflow
+keras
+pillow
+pandas
+mesa
+EasyProcess
